--- a/src/Components/About Me Page/About.css
+++ b/src/Components/About Me Page/About.css
@@ -62,4 +62,13 @@
     margin-bottom: 15vh;
     margin-top: 15px;
   }
+  
+}
+.techstackMargin{
+ 
+  margin-right: 10px;
+  /* border: 2px solid yellow; */
+}
+.techstackMarginBox{
+  display:flex;
 }
